# 1ai-social

./: .dockerignore  .env.example  .gitignore  COMPREHENSIVE_PLAN.md  Dockerfile  README.md  SKILL.md  WEBHOOK_FORMAT.md  alembic.ini  config.yaml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  fix_ci_errors.py  fix_ci_errors10.py  fix_ci_errors11.py  fix_ci_errors12.py  fix_ci_errors13.py  fix_ci_errors2.py  fix_ci_errors3.py  fix_ci_errors4.py  fix_ci_errors5.py  fix_ci_errors6.py  fix_ci_errors7.py  fix_ci_errors8.py  fix_ci_errors9.py  mcp_server.py  prometheus.yml  pyproject.toml  requirements.txt  test_admin.py  test_api_key_isolation.py  test_api_keys.py  test_dunning.py  test_encryption.py  test_gdpr.py  test_health.py  test_input_validation.py  test_migrations.sh  test_rate_limit_simulation.py  (+8 more)
.github/: WORKFLOW_DOCUMENTATION.md
1ai_social/: __init__.py  __main__.py  admin.py  api_keys.py  audit.py  cache.py  config.py  db_models.py  encryption.py  gdpr.py  health.py  logging_config.py  mcp_server.py  metrics.py  models.py  onboarding.py  rate_limiter.py  schemas.py  secrets.py  security_headers.py  tenant_context.py  webhooks.py
data/: confidence_scores.json
docs/: BACKUP_PROCEDURES.md  LEMONSQUEEZY_SETUP.md  deployment-runbook.md  deployment.md  faq.md  features.md  gdpr-audit-report.md  getting-started.md  incident-response.md  production-readiness-checklist.md  security-audit-report.md  security-checklist.md  security-runbook.md  stripe-migration.md
frontend/: ecosystem.config.js  package-lock.json  package.json
migrations/: env.py  (+2 more)
(+174 files in other folders)
