[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "1ai-social"
version = "0.1.0"
description = "MCP server for social media automation and engagement"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "1ai", email = "dev@1ai.com"}
]
keywords = ["mcp", "social-media", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.0",
    "python-crontab>=2.7.1",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/1ai/1ai-social"
Documentation = "https://github.com/1ai/1ai-social/wiki"
Repository = "https://github.com/1ai/1ai-social.git"
Issues = "https://github.com/1ai/1ai-social/issues"

[tool.setuptools.packages.find]
where = ["."]
